--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -46,10 +46,7 @@
         background: #fbfbfb;
         position: absolute;
         z-index: 10;
-
         offset-rotate: 0deg;
-        offset-anchor: left bottom;
-
         offset-path: path(
           "M1056.48 766.81C1010.62 835.81 911.565 860.205 788.24 843.638C664.952 827.076 517.59 769.589 375.393 675.083C233.197 580.576 123.132 466.971 60.1208 359.715C-2.90932 252.427 -18.7759 151.651 27.0822 82.6518C72.9404 13.6527 171.998 -10.7424 295.323 5.82472C418.611 22.3868 565.974 79.8733 708.17 174.38C850.366 268.886 960.432 382.491 1023.44 489.747C1086.47 597.035 1102.34 697.811 1056.48 766.81Z"
         );
@@ -81,10 +78,7 @@
         background: #fbfbfb;
         position: absolute;
         z-index: 10;
-
         offset-rotate: 0deg;
-        offset-anchor: left bottom;
-
         offset-path: path(
           "M1056.48 766.81C1010.62 835.81 911.565 860.205 788.24 843.638C664.952 827.076 517.59 769.589 375.393 675.083C233.197 580.576 123.132 466.971 60.1208 359.715C-2.90932 252.427 -18.7759 151.651 27.0822 82.6518C72.9404 13.6527 171.998 -10.7424 295.323 5.82472C418.611 22.3868 565.974 79.8733 708.17 174.38C850.366 268.886 960.432 382.491 1023.44 489.747C1086.47 597.035 1102.34 697.811 1056.48 766.81Z"
         );
@@ -118,8 +112,6 @@
         z-index: 10;
 
         offset-rotate: 0deg;
-        offset-anchor: left bottom;
-
         offset-path: path(
           "M1056.48 766.81C1010.62 835.81 911.565 860.205 788.24 843.638C664.952 827.076 517.59 769.589 375.393 675.083C233.197 580.576 123.132 466.971 60.1208 359.715C-2.90932 252.427 -18.7759 151.651 27.0822 82.6518C72.9404 13.6527 171.998 -10.7424 295.323 5.82472C418.611 22.3868 565.974 79.8733 708.17 174.38C850.366 268.886 960.432 382.491 1023.44 489.747C1086.47 597.035 1102.34 697.811 1056.48 766.81Z"
         );
@@ -138,10 +130,11 @@
         opacity: 0.25;
       }
       .dot {
-        animation: anim 14s linear infinite;
         // offset-distance: 50%;
+        animation: anim 14s linear infinite;
         animation-delay: 0.4s;
         left: 20px;
+        top: -2px;
       }
     }
     .circle {
@@ -175,12 +168,12 @@
       // animation: anim 10s linear infinite;
       padding: 12px 22px;
       offset-rotate: 0deg;
-      offset-anchor: left bottom;
+      // offset-anchor: left bottom !important;
       z-index: 15;
 
-      @media (max-width: 500px) {
-        display: none;
-      }
+      // @media (max-width: 500px) {
+      //   display: none;
+      // }
 
       p {
         font-family: "SFProText";
